--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,3 +8,9 @@
     <link rel="stylesheet" href="/css/main.css"/>
     <title>Stock App</title>
 </head>
+
+<body>
+
+    <div class="header">
+        <h1>Stock App</h1>
+    </div>
