fixed header styling

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,60 +1,63 @@
 html {
-  color: white;
+    color: white;
 }
 
 body {
-  background-color: rgb(20, 20, 20);
-  margin: 0px;
+    background-color: rgb(20, 20, 20);
+    margin: 0px;
 }
 
 .header,
 .footer,
 .content {
-  position: absolute;
-  width: 100%;
+    position: absolute;
+    width: 100%;
 }
 
 .header {
-  text-align: center;
-  height: 50px;
-  top: 0;
-  background-color: rgb(41, 173, 74);
+    text-align: center;
+    top: 0;
+    overflow: hidden;
+    background-color: rgb(41, 173, 74);
 }
 
+.header h1 {
+    margin-bottom: 0px;
+}
+
+
+/* .header span {
+    display: inline-block;
+} */
+
 .footer {
-  height: 50px;
-  bottom: 0;
-  background-color: rgba(36, 36, 36, 0.829);
+    height: 50px;
+    bottom: 0;
+    background-color: rgba(36, 36, 36, 0.829);
 }
 
 .content {
-  top: 50px;
-  bottom: 50px;
+    top: 50px;
+    bottom: 50px;
 }
 
-/* Add a black background color to the top navigation */
-.navbar {
-  overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
 .navbar button {
-  float: left;
-  color: white;
-  background-color: black;
-  text-align: center;
-  text-decoration: none;
-  font-size: 17px;
+    float: left;
+    color: white;
+    background-color: black;
+    text-align: center;
+    text-decoration: none;
+    font-size: 17px;
 }
 
 h1 {
-  font-size: 32pt;
+    font-size: 32pt;
 }
 
 .formInput {
-  padding: 15px;
+    padding: 15px;
 }
 
 .content {
-  padding: 15px;
+    padding: 15px;
 }
