--- a/views/header.ejs
+++ b/views/header.ejs
@@ -16,5 +16,8 @@
         <div class="navbar">
             <button id="home">Home</button>
             <button id="profile">Profile</button>
+            <form action="/logout?_method=DELETE" method="POST">
+                <button type="submit">Log Out</button>
+            </form>
         </div>
     </div>
