added user creation

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,6 +19,9 @@
             <form action="/logout?_method=DELETE" method="POST">
                 <button type="submit">Log Out</button>
             </form>
+            <form action="/createUser?_method=CREATE" method="POST">
+                <button type="submit">Login</button>
+            </form>
         </div>
 
 
