Final Functionality (NOT FULLY TESTED)
has all funtionality with database (buying selling listing price over time)
changed how database functions work
fixed footer routing

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -7,8 +7,9 @@
 
 
 
-<script src="buildtable.js"></script>
-
+<script src="../public/libs/buildtable.js"></script>
+<script src="../public/libs/databaseFunctions.js"></script>
+<script src="../public/libs/salesFunctions.js"></script>
 
 
 
