--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,8 +19,8 @@
             <form action="/logout?_method=DELETE" method="POST">
                 <button type="submit"><%= logAction %></button>
             </form>
-            <form action="/createUser?_method=CREATE" method="POST">
-                <button type="submit">Login</button>
+            <form action="/userCreation" method="POST">
+                <button type="submit">create</button>
             </form>
         </div>
 
