--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -8,7 +8,8 @@
 
 
 <script src="buildtable.js"></script>
-
+<script src="databaseFunctions.js"></script>
+<script src="userRoutes.js"></script>
 
 
 
