--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,6 +11,21 @@
             <input type="search" placeholder="Search..." name="search">
             <input type="submit" value=&#x2315>
         </form>
+        <br>
+
+
+        <form class="timeRange" action="/" method="POST">
+            <input type="button" id="1d" value="1d" name="1d">
+            <input type="button" id="3d" value="3d" name="3d">
+            <input type="button" id="5d" value="5d" name="5d">
+            <input type="button" id="1w" value="1w" name="1w">
+            <input type="button" id="2w" value="2w" name="2w">
+            <input type="button" id="1m" value="1m" name="1m">
+            <input type="button" id="3m" value="3m" name="3m">
+            <input type="button" id="6m" value="6m" name="6m">
+            <input type="button" id="1y" value="1y" name="1y">
+        </form>
+        <canvas id="searchStock"></canvas>
 
     </div>
 
