--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,7 +14,12 @@
         </h1>
 
         <div class="buyForm">
-            
+            <form action="./userProfile" method="POST">
+                <input type="text" id="tickerID" name="tickerID" placeholder="enter a ticker">
+                <input type="text" id="shares" name="shares" placeholder="shares">
+                <input type="submit" id="buybtn" value="BUY">
+                <input type="submit" id="sellbtn" value="SELL">
+            </form>
         </div>
 
         <div class="portfolio-container">
