--- a/views/userLogin.ejs
+++ b/views/userLogin.ejs
@@ -1,17 +1,55 @@
-<h1>Login</h1>
-<% if (messages.error) { %>
-    <%= messages.error %>
-<% } %>
-<form action = "/userLogin" method = "POST">
-  <div>
-    <label for = "username">Username</label>
-    <input type = "text" id = "username" name = "username" required>
+  <link
+      rel="stylesheet"
+      href="https://bootswatch.com/4/journal/bootstrap.min.css"
+  />
+<body style = "background-color:rgb(41, 173, 74);">
+  <div class="row mt-5">
+    <div class="col-md-6 m-auto">
+      <div class="card card-body">
+        <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Login</h1>
+        <form action="/userRoutes/userLogin" method="POST">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input
+              type="text"
+              id="username"
+              name="username"
+              class="form-control"
+              placeholder="Enter Username"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              id="password"
+              name="password"
+              class="form-control"
+              placeholder="Enter Password"
+              required
+            />
+          </div>
+          <div>
+            <input type="checkbox" onclick="showPassword()">  Show Password
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">Login</button>
+        </form>
+        <p class="lead mt-4">
+          No Account? <a href="/userRoutes/userCreation">Register</a>
+        </p>
+        <script>
+          function showPassword() {
+            var pass = document.getElementById("password")
+            if (pass.type === "password") {
+              pass.type = "text"
+            }
+            else {
+              pass.type = "password"
+            }
+          }
+        </script>
+      </div>
+    </div>
   </div>
-  <div>
-    <label for = "password">Password</label>
-    <input type = "text" id = "password" name = "password" required>
-  </div>
-  <button type = "submit">Login</button>
-</form>
-<a href="/userCreation">Create Account</a>
-<html>
+</body>
