--- a/views/candlestickGraph.ejs
+++ b/views/candlestickGraph.ejs
@@ -1,21 +1,57 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-	<script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-	<style>
-		body{background: skyblue;}
-	</style>
-</head>
-	<body>
-		<form action="./candlestickGraphUpdated" method="POST">
-			<label>Stock Ticker to View: </label>
-			<input type="text" name = "CurrentStock" id="CurrentStock">
-			<button type = "submit">Submit</button>
-		</form>
-		
+<%-include('header.ejs',{ home: "Home", nav: "Profile", logAction: "notAuth"})%>
+
+<script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
 
-<div id="chartContainer" style="height: 300px; width: 100%;">
+<div class="content">
+
+<form class="search" action="candlestickGraph" method="POST">
+    <input type="search" placeholder="Search..." name="CurrentStock">
+    <input type="submit" value=&#x2315>
+</form>
+<br>
+
+<form class="timeRange" action="candlestickGraph" method="POST">
+    <input type="hidden" value="<%=CurrentStock%>" name="CurrentStock">
+    <button type="submit" id="1d" value="1d" name="range">1d</button>
+    <button type="submit" id="3d" value="3d" name="range">3d</button>
+    <button type="submit" id="5d" value="5d" name="range">5d</button>
+    <button type="submit" id="1w" value="1w" name="range">1w</button>
+    <button type="submit" id="2w" value="2w" name="range">2w</button>
+    <button type="submit" id="1m" value="1m" name="range">1m</button>
+    <button type="submit" id="3m" value="3m" name="range">3m</button>
+    <button type="submit" id="6m" value="6m" name="range">6m</button>
+    <button type="submit" id="1y" value="1y" name="range">1y</button>
+</form>
+<br>
+<div id="chartContainer" style="height: 300px; width: 100%;"></div>
+
 </div>
-</body>
-</html>
+
+<script type="text/javascript">
+var chart = new CanvasJS.Chart("chartContainer",
+{
+    title:{
+    text: "Basic Candle Stick Chart"
+},
+    zoomEnabled: true,
+    axisY: {    
+    includeZero:false,
+    title: "Prices",
+    prefix: "$ "
+},
+    axisX: {
+    interval:5,
+    intervalType: '<%-IntervalChosen%>',
+    valueFormatString: '<%IntervalDates%>',
+    labelAngle: -45
+},
+    data:[
+        {
+        type: "candlestick",
+        dataPoints: [ <%- candleStickPrices %> ] 
+        }
+]});
+chart.render();
+</script>
+<%-include('footer.ejs')%>
