--- a/views/header.ejs
+++ b/views/header.ejs
@@ -17,7 +17,7 @@
             <form action="/" method="GET">
                 <button type="submit" >Home</button>
             </form>
-            <form action="/userRoutes/userProfile" method="GET">
+            <form action="/userRoutes/userProfile" method="POST">
                 <button type="submit" >Profile</button>
             </form>
             <% if((typeof(loggedIn) !== "undefined") && loggedIn === true){ %> 
