--- a/public/css/main.css
+++ b/public/css/main.css
@@ -68,6 +68,11 @@ h1 {
   background-color: blueviolet;
 }
 
+/* .chartContainer {
+  padding-top: 100px;
+  margin-top: 100px;
+} */
+
 .buyForm {
   margin-bottom: 20px;
 }
