--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/main.css" />
-    <title>Stock App</title>
+    <title>StockFolio</title>
 </head>
 <%console.log(typeof(loggedin))%>
 <body>
