--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,4 +1,4 @@
-<%- include("header.ejs", { home: "Home", nav: "Profile", logAction: "notAuth"}) %>
+<%- include("header.ejs", { home: "Home", nav: "Profile", loggedIn: true}) %>
 
     <div class="content">
         <div class="hero">
@@ -15,7 +15,7 @@
 
         <div class="buyForm">
             <form action="./userProfile" method="POST">
-                <input type="text" id="tickerID" name="tickerID" placeholder="enter a ticker">
+                <input type="text" id="tickerID" name="CurrentStock" placeholder="enter a ticker">
                 <input type="text" id="shares" name="shares" placeholder="shares">
                 <input type="submit" id="buybtn" value="BUY">
                 <input type="submit" id="sellbtn" value="SELL">
@@ -42,10 +42,10 @@
                                 <td class = "shares">
                                 <%= port[i].numshares %>
                                 </td>
-                                <td>
+                                <td class = "visualize">
         
         
-                                <form action="./userProfile" method="POST">
+                                <form action="/candlestickGraph" method="POST">
                                     <button type="submit" id="tickerButton<%=i%>" name="CurrentStock" value="<%=port[i].ticker%>">visualize</button>
                                 </form>
         
@@ -57,12 +57,6 @@
                     <% } %>
             </table>
         </div>
-
-        <% if(typeof(candleStickPrices) !== 'undefined') { %>
-            <%-include('candlestickGraph', {profile: false, candleStickPrices: obj, CurrentStock: CurrentStock, IntervalChosen : IntervalChosen,IntervalDates : IntervalDates}) %>
-        <% } %>
-
-
 
     </div>
 
