polished UI design

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,7 +12,8 @@
 <body>
 
     <div class="header">
-        <h1>StockFolio</h1>
+        <h1>STOCKFOLIO</h1>
+        <br>
         <div class="navbar">
             <form action="/" method="GET">
                 <button type="submit" >Home</button>
@@ -37,6 +38,6 @@
             <span id="username"><p><%= username %></p></span>
             <% } %>
         </div>
-
-
     </div>
+    <br>
+    <br>
