--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,9 +55,12 @@ body {
 
 #username p {
   margin: 0px;
+  margin-right: 30px;
   float: right;
   color: black;
   border: 1px;
+  border-style: solid;
+  padding: 3px;
 }
 
 h1 {
@@ -70,10 +73,8 @@ h1 {
   padding: 15px;
 }
 
-#searchStock {
-  width: 100px;
-  height: 100px;
-  background-color: blueviolet;
+.search {
+  margin-top: 20px;
 }
 
 /* .chartContainer {
