--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,6 +2,7 @@
 
     <div class="content">
         
+        <h2>press Profile button to load changes after BUY/SELL</h2>
 
         <div class="buyForm">
             <form action="./userProfile" method="POST">
